--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,6 @@ polonius-engine = { path = "./polonius-engine" }
 log             = "0.4"
 petgraph        = "0.4.13"
 pico-args       = "0.2"
+itertools       = "0.10"
 
 [workspace]
